@@ -1,5 +1,11 @@
 2002-04-25  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
+	* automake.in (subobjname): Use the length of %subobjvar
+	instead	of $subobjnamenum.
+	(subobjnamenum): Remove.
+
+2002-04-25  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
 	For PR automake/307:
 	* lib/depcomp: Never compute dependencies in the background, this
 	can cause races with libtool.  Compute the dependencies after
